<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEM</string>
    <string name="how_play">How to Play</string>
    <string name="info_text">Tap the screen to play the game.</string>
    <string name="red_button_text">RED</string>
    <string name="yellow_button_text">Yellow</string>
    <string name="green_button_text">GREEN</string>
</resources>